--- a/templates/taxi/driver_list.html
+++ b/templates/taxi/driver_list.html
@@ -9,7 +9,7 @@
     </tr>
     {% for driver in object_list %}
       <tr>
-        <td><a href="{% url 'driver-detail' driver.id %}">{{ driver.username }}</a></td>
+        <td><a href="{% url 'taxi:driver-detail' driver.id %}">{{ driver.username }}</a></td>
         <td>{{ driver.first_name }}</td>
         <td>{{ driver.last_name }}</td>
       </tr>
