--- a/templates/taxi/car_list.html
+++ b/templates/taxi/car_list.html
@@ -9,7 +9,7 @@
     </tr>
     {% for car in object_list %}
       <tr>
-        <td><a href="{% url 'car-detail' car.id %}">{{ car.id }}</a></td>
+        <td><a href="{% url 'taxi:car-detail' car.id %}">{{ car.id }}</a></td>
         <td>{{ car.model }}</td>
         <td>{{ car.manufacturer.name }}</td>
       </tr>
